--- a/requirements.txt
+++ b/requirements.txt
@@ -1,61 +1,47 @@
 anyio==3.6.2
 async-property==0.2.1
-attrs==22.1.0
-black==22.10.0
 bleach==5.0.1
-certifi==2022.9.24
+certifi==2022.12.7
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 click-log==0.4.0
 colorama==0.4.6
-coverage==6.5.0
-cryptography==38.0.3
-dataclasses==0.6
+cryptography==38.0.4
 deprecation==2.1.0
 docutils==0.19
 dotty-dict==1.3.1
-fastapi==0.87.0
-gitdb==4.0.9
+fastapi==0.88.0
+gitdb==4.0.10
 GitPython==3.1.29
 gotrue==0.5.4
-h11==0.12.0
-httpcore==0.15.0
-httpx==0.23.0
+h11==0.14.0
+httpcore==0.16.2
+httptools==0.5.0
+httpx==0.23.1
 idna==3.4
-importlib-metadata==5.0.0
-iniconfig==1.1.1
+importlib-metadata==5.1.0
 invoke==1.7.3
 jaraco.classes==3.2.3
 jeepney==0.8.0
 Jinja2==3.1.2
-jwt==1.3.1
 keyring==23.11.0
 MarkupSafe==2.1.1
 more-itertools==9.0.0
-mypy==0.982
+mypy==0.991
 mypy-extensions==0.4.3
-packaging==21.3
-pathspec==0.10.1
-pkginfo==1.8.3
-platformdirs==2.5.2
-pluggy==1.0.0
+packaging==22.0
+pkginfo==1.9.2
 postgrest-py==0.10.3
-prisma==0.7.0
-py==1.11.0
+prisma==0.7.1
 pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
-pyparsing==3.0.9
-PySnooper==1.1.1
-pytest==7.1.3
-pytest-cov==4.0.0
-pytest-mock==3.10.0
-pytest-timeout==2.1.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
-python-gitlab==3.11.0
+python-gitlab==3.12.0
 python-semantic-release==7.32.1
+PyYAML==6.0
 readme-renderer==37.3
 realtime==0.0.5
 requests==2.28.1
@@ -66,17 +52,18 @@ semver==2.13.0
 six==1.16.0
 smmap==5.0.0
 sniffio==1.3.0
-starlette==0.21.0
+starlette==0.22.0
 storage3==0.3.5
 supabase==0.7.1
 supafunc==0.2.2
-tomli==2.0.1
 tomlkit==0.11.6
 tqdm==4.64.1
 twine==3.8.0
 typing_extensions==4.4.0
-urllib3==1.26.12
-uvicorn==0.19.0
+urllib3==1.26.13
+uvicorn==0.20.0
+uvloop==0.17.0
+watchfiles==0.18.1
 webencodings==0.5.1
 websockets==10.4
-zipp==3.10.0
+zipp==3.11.0
