--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 anyio==3.6.2
-async-property==0.2.1
 bleach==5.0.1
 certifi==2022.12.7
 cffi==1.15.1
@@ -17,19 +16,14 @@ GitPython==3.1.29
 gotrue==0.5.4
 h11==0.14.0
 httpcore==0.16.2
-httptools==0.5.0
 httpx==0.23.1
 idna==3.4
 importlib-metadata==5.1.0
 invoke==1.7.3
 jaraco.classes==3.2.3
 jeepney==0.8.0
-Jinja2==3.1.2
 keyring==23.11.0
-MarkupSafe==2.1.1
 more-itertools==9.0.0
-mypy==0.991
-mypy-extensions==0.4.3
 packaging==22.0
 pkginfo==1.9.2
 postgrest-py==0.10.3
@@ -37,11 +31,11 @@ prisma==0.7.1
 pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
+pyOpenSSL==22.1.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 python-gitlab==3.12.0
 python-semantic-release==7.32.1
-PyYAML==6.0
 readme-renderer==37.3
 realtime==0.0.5
 requests==2.28.1
@@ -61,9 +55,6 @@ tqdm==4.64.1
 twine==3.8.0
 typing_extensions==4.4.0
 urllib3==1.26.13
-uvicorn==0.20.0
-uvloop==0.17.0
-watchfiles==0.18.1
 webencodings==0.5.1
 websockets==10.4
 zipp==3.11.0
