--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,7 @@ tqdm==4.64.1
 twine==3.8.0
 typing_extensions==4.4.0
 urllib3==1.26.13
+uvicorn==0.20.0
 webencodings==0.5.1
 websockets==10.4
 zipp==3.11.0
