--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - uses: MadeByThePinsHub/setup-railway-cli-action@v0.1.0
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
