--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 anyio==3.6.2
+black==22.12.0
 bleach==5.0.1
 certifi==2022.12.7
 cffi==1.15.1
@@ -7,6 +8,7 @@ click==8.1.3
 click-log==0.4.0
 colorama==0.4.6
 cryptography==38.0.4
+dataclasses==0.6
 deprecation==2.1.0
 docutils==0.19
 dotty-dict==1.3.1
@@ -22,15 +24,21 @@ importlib-metadata==5.1.0
 invoke==1.7.3
 jaraco.classes==3.2.3
 jeepney==0.8.0
+Jinja2==3.1.2
 keyring==23.11.0
+MarkupSafe==2.1.1
 more-itertools==9.0.0
+mypy-extensions==0.4.3
 packaging==22.0
+pathspec==0.10.3
 pkginfo==1.9.2
+platformdirs==2.6.0
 postgrest-py==0.10.3
 prisma==0.7.1
 pycparser==2.21
 pydantic==1.10.2
 Pygments==2.13.0
+PyJWT==2.6.0
 pyOpenSSL==22.1.0
 python-dateutil==2.8.2
 python-dotenv==0.21.0
