--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ pycparser==2.21
 pydantic==1.10.5
 Pygments==2.14.0
 PyJWT==2.6.0
+pyright==1.1.295
 python-dateutil==2.8.2
 python-dotenv==0.21.1
 python-gitlab==3.13.0
@@ -50,6 +51,7 @@ readme-renderer==37.3
 realtime==1.0.0
 requests==2.28.2
 requests-toolbelt==0.10.1
+result==0.9.0
 rfc3986==1.5.0
 SecretStorage==3.3.3
 semver==2.13.0
